Fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,7 @@ a {
 	display: grid;
 	row-gap: 2rem;
 	column-gap: 2rem;
+	align-items: flex-start;
 
 	/* grid-temp */
 	grid-template-areas:
